--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -54,7 +54,7 @@ debug              = ["esp-hal-common/debug"]
 defmt              = ["esp-hal-common/defmt", "esp-println/defmt"]
 eh1                = ["esp-hal-common/eh1"]
 log                = ["esp-hal-common/log", "esp-println/log"]
-rt                 = []
+rt                 = ["esp-hal-common/rt-xtensa"]
 ufmt               = ["esp-hal-common/ufmt"]
 vectored           = ["esp-hal-common/vectored"]
 xtal-26mhz         = ["esp-hal-common/xtal-26mhz"]
