--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -55,7 +55,7 @@ direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
 interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
 log                  = ["esp-hal-common/log", "esp-println/log"]
-rt                   = []
+rt                   = ["esp-hal-common/rt-riscv"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
 xtal-26mhz           = ["esp-hal-common/xtal-26mhz"]
