--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -148,7 +148,7 @@ log = [
 ]
 
 [package.metadata.docs.rs]
-features = ["esp32c3", "wifi", "ble", "async", "embassy-net", "esp32c3-hal/embassy-time-systick", "esp32c3-hal/default"]
+features = ["esp32c3", "wifi", "ble", "coex", "async", "embassy-net", "esp32c3-hal/embassy-time-systick", "esp32c3-hal/default"]
 default-target = "riscv32imc-unknown-none-elf"
 
 # These examples are used in test automation
