--- a/esp-hal-smartled/Cargo.toml
+++ b/esp-hal-smartled/Cargo.toml
@@ -12,7 +12,7 @@ features = ["esp32c3"]
 
 [dependencies]
 defmt            = { version = "=0.3.5", optional = true }
-esp-hal-common   = { version = "0.14.0", path = "../esp-hal-common" }
+esp-hal-common   = { version = "0.14.1", path = "../esp-hal-common" }
 fugit            = "0.3.7"
 smart-leds-trait = "0.2.1"
 
@@ -28,3 +28,9 @@ xtal-26mhz = ["esp-hal-common/xtal-26mhz"]
 xtal-40mhz = ["esp-hal-common/xtal-40mhz"]
 
 defmt = ["dep:defmt", "esp-hal-common/defmt"]
+
+[patch.crates-io]
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-futures  = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
