--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -31,14 +31,14 @@ crypto-bigint      = { version = "0.5.5", default-features = false }
 embassy-executor   = { version = "0.4.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.2"
+embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
+embedded-hal-async = "1.0.0"
 embedded-io-async  = "0.6.1"
 embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
-esp-backtrace      = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace      = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.7.0", features = ["esp32"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.7.1", features = ["esp32"] }
+esp-println        = { version = "0.8.0", features = ["esp32"] }
 heapless           = "0.8.0"
 lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.8", default-features = false}
@@ -51,7 +51,7 @@ default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
 async       = ["esp-hal-common/async"]
 bluetooth   = []
 debug       = ["esp-hal-common/debug"]
-defmt       = ["esp-hal-common/defmt", "esp-println/defmt"]
+defmt       = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
 eh1         = ["esp-hal-common/eh1"]
 embedded-io = ["esp-hal-common/embedded-io"]
 log         = ["esp-hal-common/log", "esp-println/log"]
@@ -143,3 +143,8 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2s_read"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
