--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -31,12 +31,12 @@ elliptic-curve     = { version = "0.13.8", default-features = false, features = 
 embassy-executor   = { version = "0.4.0",  features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.2"
+embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
+embedded-hal-async = "1.0.0"
 embedded-io-async  = "0.6.1"
 embedded-hal-bus   = "0.1.0-rc.2"
-esp-backtrace      = { version = "0.9.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
-esp-println        = { version = "0.7.1", features = ["esp32c2"] }
+esp-backtrace      = { version = "0.10.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
+esp-println        = { version = "0.8.0", features = ["esp32c2"] }
 heapless           = "0.8.0"
 hex-literal        = "0.4.1"
 lis3dh-async       = "0.8.0"
@@ -50,7 +50,7 @@ static_cell        = { version = "2.0.0", features = ["nightly"] }
 default              = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
 async                = ["esp-hal-common/async"]
 debug                = ["esp-hal-common/debug"]
-defmt                = ["esp-hal-common/defmt", "esp-println/defmt"]
+defmt                = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
 direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
 embedded-io          = ["esp-hal-common/embedded-io"]
@@ -119,3 +119,8 @@ required-features = ["embassy", "async", "embassy-executor-thread"]
 [[example]]
 name              = "direct-vectoring"
 required-features = ["direct-vectoring"]
+
+[patch.crates-io]
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
