--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -31,14 +31,14 @@ crypto-bigint      = { version = "0.5.5", default-features = false }
 embassy-executor   = { version = "0.4.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.2"
+embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
+embedded-hal-async = "1.0.0"
 embedded-io-async  = "0.6.1"
 embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
-esp-backtrace      = { version = "0.9.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
+esp-backtrace      = { version = "0.10.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
 esp-hal-smartled   = { version = "0.7.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.7.1", features = ["esp32s2"] }
+esp-println        = { version = "0.8.0", features = ["esp32s2"] }
 # Xtensa targets are not auto detected to need atomic emulation in the futures-* crates.
 # As for how to remove this dep for good, see: https://github.com/rust-lang/futures-rs/pull/2805
 futures-util       = { version = "0.3.17", default-features = false, features = ["portable-atomic"] }
@@ -56,7 +56,7 @@ usbd-serial        = "0.2.0"
 default     = ["rt", "vectored", "embassy-integrated-timers"]
 async       = ["esp-hal-common/async"]
 debug       = ["esp-hal-common/debug"]
-defmt       = ["esp-hal-common/defmt", "esp-println/defmt"]
+defmt       = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
 eh1         = ["esp-hal-common/eh1"]
 embedded-io = ["esp-hal-common/embedded-io"]
 log         = ["esp-hal-common/log", "esp-println/log"]
@@ -139,3 +139,8 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2s_read"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
