Add `embedded-io` feature to each chip-specific HAL

--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -47,18 +47,19 @@ ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
 
 [features]
-default            = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
-async              = ["esp-hal-common/async"]
-bluetooth          = []
-debug              = ["esp-hal-common/debug"]
-defmt              = ["esp-hal-common/defmt", "esp-println/defmt"]
-eh1                = ["esp-hal-common/eh1"]
-log                = ["esp-hal-common/log", "esp-println/log"]
-rt                 = ["esp-hal-common/rt-xtensa"]
-ufmt               = ["esp-hal-common/ufmt"]
-vectored           = ["esp-hal-common/vectored"]
-xtal-26mhz         = ["esp-hal-common/xtal-26mhz"]
-xtal-40mhz         = ["esp-hal-common/xtal-40mhz"]
+default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
+async       = ["esp-hal-common/async"]
+bluetooth   = []
+debug       = ["esp-hal-common/debug"]
+defmt       = ["esp-hal-common/defmt", "esp-println/defmt"]
+eh1         = ["esp-hal-common/eh1"]
+embedded-io = ["esp-hal-common/embedded-io"]
+log         = ["esp-hal-common/log", "esp-println/log"]
+rt          = ["esp-hal-common/rt-xtensa"]
+ufmt        = ["esp-hal-common/ufmt"]
+vectored    = ["esp-hal-common/vectored"]
+xtal-26mhz  = ["esp-hal-common/xtal-26mhz"]
+xtal-40mhz  = ["esp-hal-common/xtal-40mhz"]
 
 # Embassy support
 embassy                    = ["esp-hal-common/embassy"]
