--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -53,6 +53,7 @@ debug                = ["esp-hal-common/debug"]
 defmt                = ["esp-hal-common/defmt", "esp-println/defmt"]
 direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
+embedded-io          = ["esp-hal-common/embedded-io"]
 interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
 log                  = ["esp-hal-common/log", "esp-println/log"]
 rt                   = ["esp-hal-common/rt-riscv"]
