--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -53,15 +53,16 @@ usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
 
 [features]
-default   = ["rt", "vectored", "embassy-integrated-timers"]
-async     = ["esp-hal-common/async"]
-debug     = ["esp-hal-common/debug"]
-defmt     = ["esp-hal-common/defmt", "esp-println/defmt"]
-eh1       = ["esp-hal-common/eh1"]
-log       = ["esp-hal-common/log", "esp-println/log"]
-rt        = ["esp-hal-common/rt-xtensa"]
-ufmt      = ["esp-hal-common/ufmt"]
-vectored  = ["esp-hal-common/vectored"]
+default     = ["rt", "vectored", "embassy-integrated-timers"]
+async       = ["esp-hal-common/async"]
+debug       = ["esp-hal-common/debug"]
+defmt       = ["esp-hal-common/defmt", "esp-println/defmt"]
+eh1         = ["esp-hal-common/eh1"]
+embedded-io = ["esp-hal-common/embedded-io"]
+log         = ["esp-hal-common/log", "esp-println/log"]
+rt          = ["esp-hal-common/rt-xtensa"]
+ufmt        = ["esp-hal-common/ufmt"]
+vectored    = ["esp-hal-common/vectored"]
 
 # Embassy support
 embassy                    = ["esp-hal-common/embassy"]
