--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -33,15 +33,15 @@ embassy-executor   = { version = "0.4.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal       = { version = "0.2.7",  features = ["unproven"] }
-embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.2"
+embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
+embedded-hal-async = "1.0.0"
 embedded-can       = "0.4.1"
 embedded-io-async  = "0.6.1"
 embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
-esp-backtrace      = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace      = { version = "0.10.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.7.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.7.1", features = ["esp32s3"] }
+esp-println        = { version = "0.8.0", features = ["esp32s3"] }
 heapless           = "0.8.0"
 hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = "0.8.0"
@@ -56,7 +56,7 @@ usbd-serial        = "0.2.0"
 default     = ["rt", "vectored", "embassy-integrated-timers"]
 async       = ["esp-hal-common/async"]
 debug       = ["esp-hal-common/debug"]
-defmt       = ["esp-hal-common/defmt", "esp-println/defmt"]
+defmt       = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
 embedded-io = ["esp-hal-common/embedded-io"]
 eh1         = ["esp-hal-common/eh1"]
 log         = ["esp-hal-common/log", "esp-println/log"]
@@ -164,3 +164,8 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_usb_serial_jtag"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
+embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
