--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -40,12 +40,13 @@ void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.3.1", optional = true }
 
 # async
-embedded-hal-async = { version = "1.0.0", optional = true }
-embedded-io-async  = { version = "0.6.1", optional = true }
-embassy-executor   = { version = "0.4.0", optional = true }
-embassy-futures    = { version = "0.1.1", optional = true }
-embassy-sync       = { version = "0.5.0", optional = true }
-embassy-time       = { version = "0.2.0", optional = true }
+embedded-hal-async   = { version = "1.0.0", optional = true }
+embedded-io-async    = { version = "0.6.1", optional = true }
+embassy-executor     = { version = "0.5.0", optional = true }
+embassy-futures      = { version = "0.1.1", optional = true }
+embassy-sync         = { version = "0.5.0", optional = true }
+embassy-time         = { version = "0.3.0", optional = true }
+embassy-time-driver  = { version = "0.1.0", optional = true }
 
 # RISC-V
 riscv        = { version = "0.10.1", optional = true }
@@ -138,7 +139,7 @@ async = [
 ]
 
 # Embassy support
-embassy = ["embassy-time", "procmacros/embassy"]
+embassy = ["embassy-time", "embassy-time-driver", "procmacros/embassy"]
 
 embassy-executor-interrupt = ["embassy", "embassy-executor"]
 embassy-executor-thread    = ["embassy", "embassy-executor"]
