Add support for 80Mhz psram, selected using 'psram-80mhz' feature (#1073)
* Add support for 80Mhz psram, selected using 'psram-80mhz' feature

Default stays 40 MHz

* Added changelog regarding 80MHz PSRAM support

* Add 80Mhz support also to octal psram

* Add documentation for 80Mhz psram in lib.rs

* Linker script adjustments needed for wifi drivers (#1074)

* Add `embedded-io` feature to each chip-specific HAL (#1072)

* Add `embedded-io` feature to each chip-specific HAL

* Update `CHANGELOG.md`

* Update to `1.0.0` releases of `embedded-hal-*` packages (#1068)

* Update to `1.0.0` releases of `embedded-hal-*` packages

* Update `CHANGELOG.md`

* Added changelog regarding 80MHz PSRAM support

---------

Co-authored-by: Björn Quentin <bjoernQ@users.noreply.github.com>
Co-authored-by: Jesse Braham <jessebraham@users.noreply.github.com>

--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -91,6 +91,9 @@ opsram-4m  = ["esp-hal-common/opsram-4m", "psram"]
 opsram-8m  = ["esp-hal-common/opsram-8m", "psram"]
 opsram-16m = ["esp-hal-common/opsram-16m", "psram"]
 
+# PSRAM 80Mhz frequency support
+psram-80mhz  = ["esp-hal-common/psram-80mhz"]
+
 [profile.release]
 debug = true
 
