--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -22,7 +22,6 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.3.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
@@ -45,6 +44,7 @@ sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
