--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -22,7 +22,6 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32c2"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.3.0",  optional = true }
 
 [dev-dependencies]
 critical-section   = "1.1.2"
@@ -45,6 +44,7 @@ p256               = { version = "0.13.2", default-features = false, features = 
 sha2               = { version = "0.10.8", default-features = false}
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+embassy-time       = { version = "0.3.0" }
 
 [features]
 default              = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
