--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -23,7 +23,6 @@ categories = [
 [dependencies]
 cfg-if         = "1.0.0"
 esp-hal-common = { version = "0.14.0", features = ["esp32c3"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.3.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
@@ -48,6 +47,8 @@ sha2               = { version = "0.10.8", default-features = false }
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+embassy-time       = { version = "0.3.0" }
+
 
 [features]
 default              = ["rt", "vectored", "zero-rtc-bss", "embassy-integrated-timers"]
