--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -22,7 +22,6 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32s3"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.3.0",  optional = true }
 r0             = { version = "1.0.0",  optional = true }
 
 [dev-dependencies]
@@ -51,6 +50,7 @@ ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
 usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
+embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "embassy-integrated-timers"]
