--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -22,13 +22,12 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.2.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.5", default-features = false }
-embassy-executor   = { version = "0.4.0", features = ["nightly"] }
+embassy-executor   = { version = "0.5.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
@@ -40,11 +39,12 @@ esp-backtrace      = { version = "0.10.0", features = ["esp32", "panic-handler",
 esp-hal-smartled   = { version = "0.7.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.8.0", features = ["esp32"] }
 heapless           = "0.8.0"
-lis3dh-async       = "0.8.0"
+lis3dh-async       = "0.9.1"
 sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
@@ -143,8 +143,3 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2s_read"
 required-features = ["embassy", "async"]
-
-[patch.crates-io]
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
