--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -22,14 +22,13 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32h2"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.2.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.5", default-features = false }
 elliptic-curve     = { version = "0.13.8", default-features = false, features = ["sec1"] }
-embassy-executor   = { version = "0.4.0", features = ["nightly"] }
+embassy-executor   = { version = "0.5.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
@@ -43,13 +42,14 @@ esp-println        = { version = "0.8.0", features = ["esp32h2"] }
 heapless           = "0.8.0"
 hex-literal        = "0.4.1"
 hmac               = { version = "0.12.1", default-features = false }
-lis3dh-async       = "0.8.0"
+lis3dh-async       = "0.9.1"
 p192               = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
 p256               = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
 sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+embassy-time   = { version = "0.3.0"}
 
 [features]
 default              = ["rt", "vectored", "zero-rtc-bss", "embassy-integrated-timers"]
@@ -156,8 +156,3 @@ required-features = ["embassy", "async", "embassy-executor-thread"]
 [[example]]
 name              = "embassy_usb_serial_jtag"
 required-features = ["embassy", "async", "embassy-executor-thread"]
-
-[patch.crates-io]
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
