--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -22,14 +22,13 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.14.0", features = ["esp32s3"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.2.0",  optional = true }
 r0             = { version = "1.0.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.5", default-features = false }
-embassy-executor   = { version = "0.4.0", features = ["nightly"] }
+embassy-executor   = { version = "0.5.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal       = { version = "0.2.7",  features = ["unproven"] }
@@ -44,13 +43,14 @@ esp-hal-smartled   = { version = "0.7.0", features = ["esp32s3"], path = "../esp
 esp-println        = { version = "0.8.0", features = ["esp32s3"] }
 heapless           = "0.8.0"
 hmac               = { version = "0.12.1", default-features = false }
-lis3dh-async       = "0.8.0"
+lis3dh-async       = "0.9.1"
 sha2               = { version = "0.10.8", default-features = false }
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
 usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
+embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "embassy-integrated-timers"]
@@ -164,8 +164,3 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_usb_serial_jtag"
 required-features = ["embassy", "async"]
-
-[patch.crates-io]
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
-embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
