--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -29,6 +29,7 @@ critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.5", default-features = false }
 embassy-executor   = { version = "0.5.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
+embassy-time       = "0.3.0"
 embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
 embedded-hal-async = "1.0.0"
@@ -44,7 +45,6 @@ sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
-embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
@@ -63,17 +63,10 @@ xtal-40mhz  = ["esp-hal-common/xtal-40mhz"]
 
 # Embassy support
 embassy                    = ["esp-hal-common/embassy"]
-embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
 embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
-
-# prefer integrated timers, but allow using the generic queue if needed
-embassy-integrated-timers = ["esp-hal-common/embassy-integrated-timers"]
-embassy-generic-queue-8   = ["esp-hal-common/embassy-generic-queue-8"]
-embassy-generic-queue-16  = ["esp-hal-common/embassy-generic-queue-16"]
-embassy-generic-queue-32  = ["esp-hal-common/embassy-generic-queue-32"]
-embassy-generic-queue-64  = ["esp-hal-common/embassy-generic-queue-64"]
-embassy-generic-queue-128 = ["esp-hal-common/embassy-generic-queue-128"]
+embassy-integrated-timers  = ["esp-hal-common/embassy-integrated-timers"]
+embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
 # PSRAM support
 psram     = []
