--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -30,6 +30,7 @@ critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.5", default-features = false }
 embassy-executor   = { version = "0.5.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
+embassy-time       = "0.3.0"
 embedded-graphics  = "0.8.1"
 embedded-hal       = { version = "0.2.7",  features = ["unproven"] }
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
@@ -50,7 +51,6 @@ ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
 usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
-embassy-time       = { version = "0.3.0" }
 
 [features]
 default     = ["rt", "vectored", "embassy-integrated-timers"]
@@ -66,18 +66,11 @@ vectored    = ["esp-hal-common/vectored"]
 
 # Embassy support
 embassy                    = ["esp-hal-common/embassy"]
-embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
-embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
 embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
-
-# prefer integrated timers, but allow using the generic queue if needed
-embassy-integrated-timers = ["esp-hal-common/embassy-integrated-timers"]
-embassy-generic-queue-8   = ["esp-hal-common/embassy-generic-queue-8"]
-embassy-generic-queue-16  = ["esp-hal-common/embassy-generic-queue-16"]
-embassy-generic-queue-32  = ["esp-hal-common/embassy-generic-queue-32"]
-embassy-generic-queue-64  = ["esp-hal-common/embassy-generic-queue-64"]
-embassy-generic-queue-128 = ["esp-hal-common/embassy-generic-queue-128"]
+embassy-integrated-timers  = ["esp-hal-common/embassy-integrated-timers"]
+embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
+embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
 # PSRAM support
 psram    = []
