--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name         = "esp32-hal"
-version      = "0.17.0"
+version      = "0.18.0"
 edition      = "2021"
 rust-version = "1.67.0"
 description  = "HAL for ESP32 microcontrollers"
@@ -21,7 +21,7 @@ categories = [
 ]
 
 [dependencies]
-esp-hal-common = { version = "0.14.0", features = ["esp32"], path = "../esp-hal-common" }
+esp-hal-common = { version = "0.15.0", features = ["esp32"], path = "../esp-hal-common" }
 
 [dev-dependencies]
 aes                = "0.8.3"
@@ -34,10 +34,10 @@ embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
 embedded-hal-async = "1.0.0"
 embedded-io-async  = "0.6.1"
-embedded-hal-bus   = "0.1.0-rc.2"
+embedded-hal-bus   = "0.1.0"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
-esp-hal-smartled   = { version = "0.7.0", features = ["esp32"], path = "../esp-hal-smartled" }
+esp-hal-smartled   = { version = "0.8.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.8.0", features = ["esp32"] }
 heapless           = "0.8.0"
 lis3dh-async       = "0.9.1"
