Add `esp32p4` feature to `esp-hal-procmacros`

--- a/esp-hal-procmacros/Cargo.toml
+++ b/esp-hal-procmacros/Cargo.toml
@@ -31,6 +31,7 @@ esp32c3     = []
 esp32c6     = ["dep:object"]
 esp32c6-lp  = []
 esp32h2     = []
+esp32p4     = []
 esp32s2     = ["dep:object"]
 esp32s2-ulp = []
 esp32s3     = ["dep:object"]
