Create the `esp32p4-hal` package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,13 +13,14 @@
   // This makes rust-analyzer work on the HAL crate and all its dependencies.
   "rust-analyzer.linkedProjects": [
     "esp32-hal/Cargo.toml"
-    // "esp32c2-hal/Cargo.toml",
-    // "esp32c3-hal/Cargo.toml",
-    // "esp32c6-hal/Cargo.toml",
-    // "esp32c6-lp-hal/Cargo.toml",
-    // "esp32h2-hal/Cargo.toml",
-    // "esp32s2-hal/Cargo.toml",
-    // "esp32s3-hal/Cargo.toml",
+    // "esp32c2-hal/Cargo.toml"
+    // "esp32c3-hal/Cargo.toml"
+    // "esp32c6-hal/Cargo.toml"
+    // "esp32c6-lp-hal/Cargo.toml"
+    // "esp32h2-hal/Cargo.toml"
+    // "esp32p4-hal/Cargo.toml"
+    // "esp32s2-hal/Cargo.toml"
+    // "esp32s3-hal/Cargo.toml"
   ],
 
   "[toml]": {
