ESP32-P4: Initial GPIO support

--- a/esp-hal-common/devices/esp32p4/device.toml
+++ b/esp-hal-common/devices/esp32p4/device.toml
@@ -17,7 +17,7 @@ peripherals = [
     # "ecdsa",
     # "efuse",
     # "gpio_sd",
-    # "gpio",
+    "gpio",
     # "h264_dma",
     # "h264",
     # "hmac",
@@ -33,7 +33,7 @@ peripherals = [
     # "i3c_slv",
     "interrupt_core0",
     "interrupt_core1",
-    # "io_mux",
+    "io_mux",
     # "isp",
     # "jpeg",
     # "lcd_cam",
