Initial support for CLIC

--- a/esp-hal-common/devices/esp32p4/device.toml
+++ b/esp-hal-common/devices/esp32p4/device.toml
@@ -92,5 +92,6 @@ peripherals = [
 
 symbols = [
     # Additional peripherals defined by us (the developers):
-    "plic",
+    "clic",
+    "very_large_intr_status",
 ]
