--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -51,6 +51,7 @@ sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.4.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+rand_core          = "0.6.4"
 
 [features]
 default = ["embassy-integrated-timers", "rt", "vectored", "zero-rtc-bss"]
