ESP32-P4: Enable efuse

--- a/esp-hal-common/devices/esp32p4/device.toml
+++ b/esp-hal-common/devices/esp32p4/device.toml
@@ -15,7 +15,7 @@ peripherals = [
     # "ds",
     # "ecc",
     # "ecdsa",
-    # "efuse",
+    "efuse",
     # "gpio_sd",
     "gpio",
     # "h264_dma",
